# grasp_db

./: CMakeLists.txt  Dual_Manipulation_GUI.conf  README.md  adapt full_vito database to new scheme.txt  amazon.db  ball.db  basic.db  bowlA.db  bowlB.db  containerA.db  containerB.db  createLibraryasObstacles.txt  cylinder.db  cylinder_grasps.db  empty.db  empty_orig.db  empty_simple_factory.db  empty_soma.db  full (vito - all objects - containerA and containerB working).db  full (vito - containerB).db  full_20150715_1809  full_bi_tino_simple_factory.db  full_box_soma.db  full_box_soma_old.db  full_house.db  full_simple_factory.db  full_vito.db  kitchenUtensilA.db  mugD.db  multi_arm_cylinder.db  multi_object_test.db  multi_object_test.db.old  objects_only_simple_grasp.db  old_cylinder.db  package.xml  panA.db  plugin_description.xml  pot.db  simple_cylinder_grasps.db  test.db  (+1 more)
create_single_dbs/: CMakeLists.txt  create_containerB_db.cpp  create_iros_db.cpp
db_apps/: CMakeLists.txt  add_table_grasps.cpp  applyGeometricTransitions.cpp  apply_named_transitions.cpp  apply_named_transitions.yaml  bootstrap_ball_db.cpp  bootstrap_bowlA_db.cpp  bootstrap_bowlB_db.cpp  bootstrap_containerA_db.cpp  bootstrap_containerB_db.cpp  bootstrap_cylinder_db.cpp  bootstrap_mugD_db.cpp  bootstrap_pot_db.cpp  create_3vito_db.cpp  create_bi_tino_simple_factory_db.cpp  create_box_soma_db.cpp  create_containerB_db.cpp  create_full_db.cpp  create_house_db.cpp  create_simple_factory_db.cpp  multi_arm_cylinder_db.cpp
db_apps/deprecated_db_apps/: CMakeLists.txt  bootstrap_ball_db.cpp  bootstrap_bowlA_db.cpp  bootstrap_bowlB_db.cpp  bootstrap_containerA_db.cpp  bootstrap_containerB_db.cpp  bootstrap_cylinder_db.cpp  bootstrap_pot_db.cpp  create_full_db.cpp  create_iros_db.cpp
grasp_creation_utilities/: CMakeLists.txt  geometric_automatic_transitions.cpp  named_automatic_transitions.cpp  specular_grasp_maker.cpp  symmetric_grasp_maker.cpp  table_grasp_maker.cpp
grasp_modification_utility/: CMakeLists.txt  GMU_gui.cpp  GMU_gui.h  grasp_modification_utility.cpp  grasp_modification_utility.h  main.cpp  normalization_utils.cpp  rviz_gmu_panel.cpp
grasp_modification_utility/meshes/: table.dae
grasp_modification_utility/urdf/: hand.urdf.xacro  table.urdf.xacro
grasp_trajectories/object1/: [AAA] ReadMe.txt  grasp0  grasp1  grasp10  grasp11  grasp12  grasp13  grasp14  grasp15  grasp2  grasp2 (original side grasp)  grasp3  grasp4  grasp5  grasp6  grasp7  grasp8  grasp9
grasp_trajectories/object10/: grasp10  grasp101  grasp103  grasp104  grasp105  grasp111  grasp112  grasp14  grasp15  grasp16  grasp2  grasp201  grasp202  grasp203  grasp204  grasp205  grasp206  grasp207  grasp208  grasp210  grasp211  grasp212  grasp213  grasp214  grasp215  grasp216  grasp7  grasp9  grasp9998
grasp_trajectories/object101/: grasp2  grasp3
grasp_trajectories/object11/: grasp1  grasp2  grasp3  grasp4  grasp5  grasp6  grasp7  grasp8
grasp_trajectories/object2/: grasp1  grasp10  grasp11  grasp12  grasp13  grasp14  grasp15  grasp16  grasp17  grasp18  grasp19  grasp2  grasp20  grasp22  grasp23  grasp24  grasp25  grasp26  grasp27  grasp28  grasp29  grasp3  grasp30  grasp31  grasp32  grasp33  grasp34  grasp35  grasp36  grasp37  grasp38  grasp39  grasp4  grasp40  grasp41  grasp42  grasp43  grasp44  grasp45  grasp46  (+23 more)
grasp_trajectories/object201/: grasp2
grasp_trajectories/object202/: grasp2  grasp3
grasp_trajectories/object203/: grasp1  grasp2
grasp_trajectories/object204/: grasp1  grasp2
grasp_trajectories/object205/: grasp2  grasp3  grasp4  grasp6  grasp7
grasp_trajectories/object206/: grasp2
grasp_trajectories/object207/: grasp1  grasp2
grasp_trajectories/object208/: grasp1
grasp_trajectories/object209/: grasp1
grasp_trajectories/object210/: grasp1  grasp2
grasp_trajectories/object211/: grasp1  grasp2
grasp_trajectories/object212/: grasp1
grasp_trajectories/object213/: grasp1  grasp2
grasp_trajectories/object3/: grasp1  grasp10  grasp11  grasp12  grasp13  grasp14  grasp15  grasp16  grasp17  grasp18  grasp19  grasp2  grasp20  grasp21  grasp22  grasp23  grasp24  grasp25  grasp26  grasp27  grasp28  grasp29  grasp3  grasp30  grasp31  grasp32  grasp33  grasp34  grasp35  grasp36  grasp37  grasp38  grasp38_LH  grasp4  grasp5  grasp6  grasp7  grasp8  grasp9
grasp_trajectories/object301/: grasp1
grasp_trajectories/object4/: grasp1  grasp10  grasp11  grasp12  grasp13  grasp14  grasp15  grasp16  grasp17  grasp18  grasp19  grasp2  grasp20  grasp3  grasp4  grasp5  grasp6  grasp7  grasp8  grasp9
grasp_trajectories/object401/: grasp142  grasp143  grasp145  grasp146  grasp243  grasp244  (+70 more)
grasps_info/: bowlA.yaml  bowlB.yaml  containerA.yaml  containerB.yaml  mugD.yaml
grasps_serializer/: CMakeLists.txt  grasps_serializer.cpp  grasps_serializer.h  main.cpp
grasps_serializer/grasps_info/: kitchenUtensilA.yaml  mugD.yaml  panA.yaml  pot.yaml
grasps_serializer/single_object_dbs/: ReadMe.md  bowlB.db  containerA.db  cylinder.db  mugD.db  panA.db  pot.db  simple_cylinder_grasps.db
include/: database_manager.h  ros_server.h
launch/: apply_named_transitions.launch  grasp_modification_utility.launch  grasp_modification_utility.rviz  serializeGrasps.launch
object_meshes/: Box_175x112x46.stl  ball.stl  box_50x150x200.stl  cylinder.dae  cylinder.stl  cylinder_100x200.stl  cylinder_53x238.dae  cylinder_53x238.stl  cylinder_62x255.dae  grasp_experiments [20150301].txt  jug_bin.stl  pot.dae  triangular_box_180x180.stl
snapshots/: containerB_snapshots.txt
src/: create_db_utils.cpp  database_manager.cpp  geometric_automatic_transitions.cpp  main.cpp  named_automatic_transitions.cpp  ros_server.cpp  specular_grasp_maker.cpp  symmetric_grasp_maker.cpp  table_grasp_maker.cpp
test/: CMakeLists.txt  automatic_transitions_main.cpp  create_containerB_db.cpp  create_iros_db.cpp  named_automatic_transitions.cpp  specular_grasp_main.cpp  specular_grasp_maker.cpp  table_grasp_data.txt  table_grasp_main.cpp  table_grasp_maker.cpp  table_grasp_maker.h
urdf/: hand.urdf.xacro  left_hand.urdf.xacro  right_hand.urdf.xacro
(+105 files in other folders)
