<package>
  <name>dual_manipulation_grasp_db</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation Grasping Database
  </description>
  <maintainer email="ale.settimi@gmail.com">Alessandro Settimi</maintainer>
  <license>BSD</license>

  <author>Alessandro Settimi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>dual_manipulation_shared</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/grasp_modification_utility/plugin_description.xml"/>
  </export>

</package>
