# add tests here

# # the following are old "tests" and are kept as examples, but are no longer supported/compiled
# add_executable(test_table_grasps table_grasp_main.cpp ../grasp_creation_utilities/table_grasp_maker.cpp)
# target_link_libraries(test_table_grasps ${catkin_LIBRARIES} sqlite3 )
# 
# add_executable(test_specular_grasps specular_grasp_main.cpp ../grasp_creation_utilities/specular_grasp_maker.cpp)
# target_link_libraries(test_specular_grasps ${catkin_LIBRARIES} sqlite3 )
# 
# add_executable(test_automatic_transitions automatic_transitions_main.cpp ../grasp_creation_utilities/named_automatic_transitions.cpp)
# target_link_libraries(test_automatic_transitions ${catkin_LIBRARIES} sqlite3 )
