# # BOOTSTRAP APPs
# # Example way of compiling
# add_executable(bootstrap_containerB_db
# 	bootstrap_containerB_db.cpp)
# add_dependencies(bootstrap_containerB_db
# 	grasp_creation_utilities
# )
# target_link_libraries(bootstrap_containerB_db
# 	${catkin_LIBRARIES}
# 	sqlite3
# 	grasp_creation_utilities
# )
